<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.seller.RegisterSellerActivity"
    tools:ignore="ContentDescription,Autofill,UselessLeaf">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rec01">

        <ImageButton
            android:id="@+id/backBtn_Seller"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_white"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <ImageButton
            android:id="@+id/gpsBtn_Seller"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_gps_white"
            android:background="@null"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/icon_Iv_Seller"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circlue01"
        android:layout_marginTop="60dp"
        android:padding="5dp"
        android:src="@drawable/ic_key_white"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_Iv_Seller">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileIv_Seller"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp"
                android:src="@drawable/ic_person_gray"/>

            <EditText
                android:id="@+id/nameEt_Seller"
                android:hint="@string/fullname"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_person_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/profileIv_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/shopNameEt_Seller"
                android:hint="@string/shop_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_store_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/nameEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/phoneEt_Seller"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_phone_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/shopNameEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/deliveryPhoneEt_Seller"
                android:hint="@string/delivery_fee"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_local_shipping_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/phoneEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02"
                tools:ignore="TextFields" />

            <LinearLayout
                android:id="@+id/layout_Seller"
                android:layout_below="@id/deliveryPhoneEt_Seller"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/countryEt_Seller"
                    android:hint="@string/country"
                    android:inputType="textPostalAddress"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_location_gray"
                    android:drawablePadding="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rec02" />

                <EditText
                    android:id="@+id/stateEt_Seller"
                    android:hint="@string/state"
                    android:inputType="textPostalAddress"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_location_gray"
                    android:drawablePadding="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rec02" />

                <EditText
                    android:id="@+id/cityEt_Seller"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_location_gray"
                    android:drawablePadding="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_rec02" />
            </LinearLayout>

            <EditText
                android:id="@+id/addressEt_Seller"
                android:hint="@string/complete_address"
                android:inputType="textPostalAddress|textMultiLine"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_location_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/layout_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/emailEt_Seller"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_mail_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/addressEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/passwordEt_Seller"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_lock_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/emailEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <EditText
                android:id="@+id/cPasswordEt_Seller"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_lock_gray"
                android:drawablePadding="5dp"
                android:layout_below="@id/passwordEt_Seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rec02" />

            <Button
                android:id="@+id/registerBtn_Seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:minWidth="120dp"
                android:layout_below="@id/cPasswordEt_Seller"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>